--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "git": "^0.1.5",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
