--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "git": "^0.1.5",
+    "html-react-parser": "^3.0.4",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
